[package]
name = "claude-code-schedule"
version = "0.1.0"
edition = "2024"
authors = ["Ian Macalinao"]
description = "Claude Code Schedule by Ian Macalinao - Schedule Claude Code commands to run overnight to refresh rate limits"
license = "Apache-2.0"
repository = "https://github.com/macalinao/claude-code-schedule"
keywords = ["claude-code", "scheduling", "cli", "automation", "ian-macalinao"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ccschedule"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
dirs = "5.0"
which = "6.0"
shlex = "1.3.0"
